Hide image in resume section for mobile

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <section id="resume" class="flex flex-col gap-12">
                 <div class="text-center text-3xl underline decoration-blue-800 underline-offset-4">Resume</div>
                 <div class="mx-auto max-w-3xl flex gap-8">
-                    <div class="flex items-center">
+                    <div class="hidden md:flex items-center">
                         <img src="media/icons/download.svg" alt="Download" class="hidden md:block w-32">
                     </div>
                     <div class="hidden md:block border-r border-slate-800"></div>
