Update project descriptions

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
                             <div class="text-xl font-bold text-blue-500">BALLZY</div>
                             <div class="h-full flex flex-col gap-4 justify-between">
-                                <div class="text-sm md:text-base text-orange-50/80">Lead developer for one of Estonia's largest fashion E-stores</div>
+                                <div class="text-sm md:text-base text-orange-50/80">Lead developer for apparel E-store</div>
                                 <div class="flex flex-wrap gap-4 text-sm">
                                     <span class="px-2 py-1 rounded-lg bg-blue-800">Magento 2</span>
                                 </div>
@@ -126,7 +126,7 @@
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
                             <div class="text-xl font-bold text-blue-500">BALLZY Raffle</div>
                             <div class="h-full flex flex-col gap-4 justify-between">
-                                <div class="text-sm md:text-base text-orange-50/80">Developer for BALLZY's raffle site</div>
+                                <div class="text-sm md:text-base text-orange-50/80">Lead developer for BALLZY's raffle site</div>
                                 <div class="flex flex-wrap gap-4 text-sm">
                                     <span class="px-2 py-1 rounded-lg bg-blue-800">Laravel</span>
                                 </div>
@@ -139,7 +139,7 @@
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
                             <div class="text-xl font-bold text-blue-500">Skechers</div>
                             <div class="h-full flex flex-col gap-4 justify-between">
-                                <div class="text-sm md:text-base text-orange-50/80">Developer for Skechers E-store in Baltics</div>
+                                <div class="text-sm md:text-base text-orange-50/80">Developer for apparel E-store</div>
                                 <div class="flex flex-wrap gap-4 text-sm">
                                     <span class="px-2 py-1 rounded-lg bg-blue-800">Magento 2</span>
                                 </div>
@@ -152,7 +152,7 @@
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
                             <div class="text-xl font-bold text-blue-500">Miterassa</div>
                             <div class="h-full flex flex-col gap-4 justify-between">
-                                <div class="text-sm md:text-base text-orange-50/80">Developer for Sony authorized E-store in Estonia</div>
+                                <div class="text-sm md:text-base text-orange-50/80">Developer for electronics E-store</div>
                                 <div class="flex flex-wrap gap-4 text-sm">
                                     <span class="px-2 py-1 rounded-lg bg-blue-800">Magento 2</span>
                                 </div>
