Update hero image size on mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section id="hero" class="flex flex-col md:flex-row gap-8">
                 <div class="w-full flex flex-col justify-center items-center gap-8">
                     <img src="media/images/profile.jpg" alt="Me"
-                         class="w-full max-w-2xs rounded-full border-2 border-blue-800 hover:scale-102">
+                         class="w-full max-w-3xs md:max-w-2xs rounded-full border-2 border-blue-800 hover:scale-102">
                     <div class="flex items-center gap-4">
                         <div class="w-3 h-3 bg-green-500 rounded-full animate-pulse"></div>
                         <div>Open to work</div>
