Prevent sending opener and referrer on link open

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <section id="projects" class="flex flex-col gap-12">
                 <div class="text-center text-3xl underline decoration-blue-800 underline-offset-4">Projects</div>
                 <div class="grid grid-cols-1 xs:grid-cols-2 xm:grid-cols-3 gap-8">
-                    <a href="https://ballzy.eu/en/" target="_blank"
+                    <a href="https://ballzy.eu/en/" target="_blank" rel="noopener noreferrer"
                        class="w-full flex flex-col rounded-lg overflow-hidden border border-slate-800 hover:border-blue-800 cursor-pointer hover:-translate-y-2">
                         <img src="media/images/ballzy.jpg" alt="Ballzy" class="w-full h-56 object-cover">
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://raffle.ballzy.eu/" target="_blank"
+                    <a href="https://raffle.ballzy.eu/" target="_blank" rel="noopener noreferrer"
                        class="w-full flex flex-col rounded-lg overflow-hidden border border-slate-800 hover:border-blue-800 cursor-pointer hover:-translate-y-2">
                         <img src="media/images/raffle.jpg" alt="Ballzy Raffle" class="w-full h-56 object-cover">
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://skechers.ee/en/" target="_blank"
+                    <a href="https://skechers.ee/en/" target="_blank" rel="noopener noreferrer"
                        class="w-full flex flex-col rounded-lg overflow-hidden border border-slate-800 hover:border-blue-800 cursor-pointer hover:-translate-y-2">
                         <img src="media/images/skechers.jpg" alt="Skechers" class="w-full h-56 object-cover">
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
@@ -146,7 +146,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://www.miterassa.ee/" target="_blank"
+                    <a href="https://www.miterassa.ee/" target="_blank" rel="noopener noreferrer"
                        class="w-full flex flex-col rounded-lg overflow-hidden border border-slate-800 hover:border-blue-800 cursor-pointer hover:-translate-y-2">
                         <img src="media/images/miterassa.jpg" alt="Miterassa" class="w-full h-56 object-cover">
                         <div class="flex-1 p-4 flex flex-col gap-4 bg-slate-900">
@@ -284,7 +284,7 @@
                             </div>
                         </div>
                         <div class="text-center md:text-left">
-                            <a href="https://drive.google.com/file/d/1XblSjxwE0XCW6QzaJLsUMzFQUzO6Bx54/view" target="_blank"
+                            <a href="https://drive.google.com/file/d/1XblSjxwE0XCW6QzaJLsUMzFQUzO6Bx54/view" target="_blank" rel="noopener noreferrer"
                                class="px-2 py-1 rounded-lg hover:bg-blue-800 border border-blue-800">Download</a>
                         </div>
                     </div>
@@ -293,17 +293,20 @@
             <section id="contact" class="flex flex-col gap-12">
                 <div class="text-center text-3xl underline decoration-blue-800 underline-offset-4">Get in Touch</div>
                 <div class="flex gap-4 md:gap-8 justify-center text-sm md:text-base text-center text-nowrap">
-                    <a href="https://github.com/martinsomer" target="_blank" class="flex flex-col gap-2 group">
+                    <a href="https://github.com/martinsomer" target="_blank" rel="noopener noreferrer"
+                       class="flex flex-col gap-2 group">
                         <img src="media/icons/github.svg" alt="GitHub" class="mx-auto w-8 sm:w-12">
                         <div class="px-2 py-1 rounded-lg border border-transparent group-hover:border-blue-800">GitHub</div>
                     </a>
                     <div class="border-r border-slate-800"></div>
-                    <a href="https://www.linkedin.com/in/martin-s%C3%B5mer-00218a303" target="_blank" class="flex flex-col gap-2 group">
+                    <a href="https://www.linkedin.com/in/martin-s%C3%B5mer-00218a303" target="_blank" rel="noopener noreferrer"
+                       class="flex flex-col gap-2 group">
                         <img src="media/icons/linkedin.svg" alt="LinkedIn" class="mx-auto w-8 sm:w-12">
                         <div class="px-2 py-1 rounded-lg border border-transparent group-hover:border-blue-800">LinkedIn</div>
                     </a>
                     <div class="border-r border-slate-800"></div>
-                    <a href="mailto:martinsom35@gmail.com" target="_blank" class="flex flex-col gap-2 group">
+                    <a href="mailto:martinsom35@gmail.com" target="_blank" rel="noopener noreferrer"
+                       class="flex flex-col gap-2 group">
                         <img src="media/icons/email.svg" alt="Email" class="mx-auto w-8 sm:w-12">
                         <div class="px-2 py-1 rounded-lg border border-transparent group-hover:border-blue-800">E-mail</div>
                     </a>
