--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body class="bg-slate-950 text-orange-50">
         <header class="sticky top-0 left-0 p-4 bg-slate-900 border-b border-slate-800 z-10">
             <div class="mx-auto max-w-5xl flex flex-col md:flex-row justify-between gap-4">
-                <a href="./index.html" class="hidden md:block text-2xl font-bold">Portfolio</a>
+                <a href="" class="hidden md:block text-2xl font-bold">Portfolio</a>
                 <nav class="flex flex-wrap justify-center md:justify-normal gap-1 md:gap-2 text-sm md:text-base">
                     <a href="#hero" class="px-2 py-1 h-min rounded-lg border border-transparent hover:border-blue-800">Home</a>
                     <a href="#about" class="px-2 py-1 h-min rounded-lg border border-transparent hover:border-blue-800">About</a>
