Change contact links hover effect

--- a/index.html
+++ b/index.html
@@ -294,21 +294,21 @@
                 <div class="text-center text-3xl underline decoration-blue-800 underline-offset-4">Get in Touch</div>
                 <div class="flex gap-4 md:gap-8 justify-center text-sm md:text-base text-center text-nowrap">
                     <a href="https://github.com/martinsomer" target="_blank" rel="noopener noreferrer"
-                       class="flex flex-col gap-2 group">
+                       class="flex flex-col gap-2 border-b-2 border-transparent hover:border-blue-800">
                         <img src="media/icons/github.svg" alt="GitHub" class="mx-auto w-8 sm:w-12">
-                        <div class="px-2 py-1 rounded-lg border border-transparent group-hover:border-blue-800">GitHub</div>
+                        <div class="px-2 py-1 rounded-lg">GitHub</div>
                     </a>
                     <div class="border-r border-slate-800"></div>
                     <a href="https://www.linkedin.com/in/martin-s%C3%B5mer-00218a303" target="_blank" rel="noopener noreferrer"
-                       class="flex flex-col gap-2 group">
+                       class="flex flex-col gap-2 border-b-2 border-transparent hover:border-blue-800">
                         <img src="media/icons/linkedin.svg" alt="LinkedIn" class="mx-auto w-8 sm:w-12">
-                        <div class="px-2 py-1 rounded-lg border border-transparent group-hover:border-blue-800">LinkedIn</div>
+                        <div class="px-2 py-1 rounded-lg">LinkedIn</div>
                     </a>
                     <div class="border-r border-slate-800"></div>
                     <a href="mailto:martinsom35@gmail.com" target="_blank" rel="noopener noreferrer"
-                       class="flex flex-col gap-2 group">
+                       class="flex flex-col gap-2 border-b-2 border-transparent hover:border-blue-800">
                         <img src="media/icons/email.svg" alt="Email" class="mx-auto w-8 sm:w-12">
-                        <div class="px-2 py-1 rounded-lg border border-transparent group-hover:border-blue-800">E-mail</div>
+                        <div class="px-2 py-1 rounded-lg">E-mail</div>
                     </a>
                 </div>
             </section>
